--- a/src/views/header.ejs
+++ b/src/views/header.ejs
@@ -55,7 +55,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#pablo">
+                    <a class="nav-link" onclick="delete_cookie('token')">
                         <span class="no-icon">Log out</span>
                     </a>
                 </li>
