--- a/src/views/sidebar.ejs
+++ b/src/views/sidebar.ejs
@@ -47,8 +47,8 @@
                 <p>Notifications</p>
             </a>
         </li>
-        <li class="nav-item active active-pro">
-            <a class="nav-link active" href="upgrade.html">
+        <li class="nav-item">
+            <a class="nav-link" href="upgrade.html">
                 <i class="nc-icon nc-alien-33"></i>
                 <p>Upgrade to PRO</p>
             </a>
