update them call api tu sever

--- a/src/views/header.ejs
+++ b/src/views/header.ejs
@@ -36,7 +36,7 @@
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link" href="#pablo">
                         <span class="no-icon">Account</span>
                     </a>
@@ -53,7 +53,7 @@
                         <div class="divider"></div>
                         <a class="dropdown-item" href="#">Separated link</a>
                     </div>
-                </li>
+                </li> -->
                 <li class="nav-item">
                     <a class="nav-link" onclick="delete_cookie('token')">
                         <span class="no-icon">Log out</span>
