--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,17 +1,3 @@
-<!-- 
-=========================================================
- Light Bootstrap Dashboard - v2.0.1
-=========================================================
-
- Product Page: https://www.creative-tim.com/product/light-bootstrap-dashboard
- Copyright 2019 Creative Tim (https://www.creative-tim.com)
- Licensed under MIT (https://github.com/creativetimofficial/light-bootstrap-dashboard/blob/master/LICENSE)
-
- Coded by Creative Tim
-
-=========================================================
-
- The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.  -->
  <!DOCTYPE html>
 
  <html lang="en">
@@ -24,65 +10,175 @@
      <title>Admin</title>
      <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
      <!--     Fonts and icons     -->
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"></head>
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+     <style>
+        body {font-family: Arial, Helvetica, sans-serif;}
+        
+        /* The Modal (background) */
+        .modal {
+          display: none; /* Hidden by default */
+          position: fixed; /* Stay in place */
+          z-index: 1; /* Sit on top */
+          padding-top: 100px; /* Location of the box */
+          left: 0;
+          top: 0;
+          width: 100%; /* Full width */
+          height: 100%; /* Full height */
+          overflow: auto; /* Enable scroll if needed */
+          background-color: rgb(0,0,0); /* Fallback color */
+          background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+        }
+        
+        /* Modal Content */
+        .modal-content {
+          position: relative;
+          background-color: #fefefe;
+          margin: auto;
+          padding: 0;
+          border: 1px solid #888;
+          width: 80%;
+          box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+          -webkit-animation-name: animatetop;
+          -webkit-animation-duration: 0.4s;
+          animation-name: animatetop;
+          animation-duration: 0.4s
+        }
+        
+        /* Add Animation */
+        @-webkit-keyframes animatetop {
+          from {top:-300px; opacity:0} 
+          to {top:0; opacity:1}
+        }
+        
+        @keyframes animatetop {
+          from {top:-300px; opacity:0}
+          to {top:0; opacity:1}
+        }
+        
+        /* The Close Button */
+        .close {
+          color: white;
+          float: right;
+          font-size: 28px;
+          font-weight: bold;
+        }
+        
+        .close:hover,
+        .close:focus {
+          color: #000;
+          text-decoration: none;
+          cursor: pointer;
+        }
+        
+        .modal-header {
+          padding: 2px 16px;
+          background-color: #5cb85c;
+          color: white;
+        }
+        
+        .modal-body {padding: 2px 16px;}
+        
+        .modal-footer {
+          padding: 2px 16px;
+          background-color: #5cb85c;
+          color: white;
+        }
+        </style>
+</head>
  
  <body>
     <div style="max-width: 350px ; margin: 50px auto;">
        <form method="POST" id="idForm" action="/sign_in">
-        <!-- Email input -->
-        <div class="form-outline mb-4">
-        <input type="text" id="username" name="username" class="form-control" placeholder="User Name" />
-        <label class="form-label" for="userName">User Name</label>
-        </div>
-    
-        <!-- Password input -->
-        <div class="form-outline mb-4">
-        <input type="password" name="password" id="password" class="form-control" placeholder="Password" />
-        <label class="form-label" for="passWord">Password</label>
-        </div>
-    
-        <!-- 2 column grid layout for inline styling -->
-        <div class="row mb-4">
-        <div class="col d-flex justify-content-center">
-            <!-- Checkbox -->
-            <div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="form2Example31" checked />
-            <label class="form-check-label" for="form2Example31"> Remember me </label>
+            <!-- Email input -->
+            <div class="form-outline mb-4">
+            <input type="text" id="username" name="username" class="form-control" placeholder="User Name" />
+            <label class="form-label" for="userName">User Name</label>
             </div>
+        
+            <!-- Password input -->
+            <div class="form-outline mb-4">
+            <input type="password" name="password" id="password" class="form-control" placeholder="Password" />
+            <label class="form-label" for="passWord">Password</label>
+            </div>
+        
+            <!-- 2 column grid layout for inline styling -->
+            <div class="row mb-4">
+            <div class="col d-flex justify-content-center">
+                <!-- Checkbox -->
+                <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="form2Example31" checked />
+                <label class="form-check-label" for="form2Example31"> Remember me </label>
+                </div>
+            </div>
+        
+            <div class="col">
+                <!-- Simple link -->
+                <a href="#!">Forgot password?</a>
+            </div>
+            </div>
+        
+            <!-- Submit button -->
+            <button type="submit" class="btn btn-primary btn-block mb-4">Sign in</button>
+        
+            <div class="text-center" style="">
+                <p>Not a member? <a style="color: blue;cursor: pointer;" id="myBtn">Register</a></p>
+                <!-- <span>or sign up with:</span> -->
+            </div>
+            <!-- <button type="button" class="btn btn-link btn-floating mx-1">
+                <i class="fab fa-facebook-f"></i>
+            </button>
+        
+            <button type="button" class="btn btn-link btn-floating mx-1">
+                <i class="fab fa-google"></i>
+            </button>
+        
+            <button type="button" class="btn btn-link btn-floating mx-1">
+                <i class="fab fa-twitter"></i>
+            </button>
+        
+            <button type="button" class="btn btn-link btn-floating mx-1">
+                <i class="fab fa-github"></i>
+            </button> -->
+            </div>
+            </form> 
+    <!-- Register buttons -->
+   
+    <div id="myModal" class="modal">
+        <!-- Modal content -->
+        <div class="modal-content"  style="width: 25% !important;">
+          <div class="modal-header">
+              <h2>Đăng ký tài khoản</h2>
+              <span class="close">&times;</span>
+          </div>
+          <div class="modal-body">
+            <form action="/register" method="post">
+                
+                <div class="form-group">
+                    <label for="user-register">User name:</label>
+                    <input name="user" type="text" class="form-control" id="user-register">
+                </div>
+
+                <div class="form-group">
+                  <label for="pwd-register">Password:</label>
+                  <input name="password" type="password" class="form-control" id="pwd-register">
+                </div>
+                
+                <div class="form-group">
+                    <label for="email-register">Email:</label>
+                    <input name="email" type="email" class="form-control" id="email-register">
+                </div>
+                <button type="submit" class="btn btn-primary" style="margin: 20px auto;">Submit</button>
+              </form>
+            <!-- <p>Some text in the Modal Body</p>
+            <p>Some other text...</p> -->
+          </div>
+          <!-- <div class="modal-footer">
+            <h3>Modal Footer</h3>
+          </div> -->
         </div>
-    
-        <div class="col">
-            <!-- Simple link -->
-            <a href="#!">Forgot password?</a>
-        </div>
-        </div>
-    
-        <!-- Submit button -->
-        <button type="submit" class="btn btn-primary btn-block mb-4">Sign in</button>
-    
-        <!-- Register buttons -->
-        <div class="text-center">
-        <p>Not a member? <a href="#!">Register</a></p>
-        <p>or sign up with:</p>
-        <button type="button" class="btn btn-link btn-floating mx-1">
-            <i class="fab fa-facebook-f"></i>
-        </button>
-    
-        <button type="button" class="btn btn-link btn-floating mx-1">
-            <i class="fab fa-google"></i>
-        </button>
-    
-        <button type="button" class="btn btn-link btn-floating mx-1">
-            <i class="fab fa-twitter"></i>
-        </button>
-    
-        <button type="button" class="btn btn-link btn-floating mx-1">
-            <i class="fab fa-github"></i>
-        </button>
-        </div>
-    </form> 
     </div>
-    
+      
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js" integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -132,6 +228,30 @@
         // }});
         // }
     })
-    
+    // Get the modal
+var modal = document.getElementById("myModal");
+
+// Get the button that opens the modal
+var btn = document.getElementById("myBtn");
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks the button, open the modal 
+btn.onclick = function() {
+  modal.style.display = "block";
+}
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+  modal.style.display = "none";
+}
+
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+  if (event.target == modal) {
+    modal.style.display = "none";
+  }
+}
 </script>
 </html>
