--- a/src/views/sanpham.ejs
+++ b/src/views/sanpham.ejs
@@ -35,9 +35,11 @@
                                         <h4 class="card-title">Danh sách sản phẩm</h4>
                                         <!-- <p class="card-category">Here is a subtitle for this table</p> -->
                                     </div>
-                                    <div>
-                                        <button type="button" class="btn btn-success" data-toggle="modal" data-target="#myModal">Thêm</button>
-                                    </div>
+                                    <% if (role.includes('add')) { %>
+                                        <div>
+                                            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#myModal">Thêm</button>
+                                        </div>
+                                    <% } %>
                                 </div>
                                 <div class="card-body table-full-width table-responsive">
                                     <table class="table table-hover table-striped">
@@ -47,7 +49,9 @@
                                             <th>Giá</th>
                                             <th>Ảnh</th>
                                             <th>Mã SP</th>
+                                            <% if (role.includes('update') && role.includes('delete') ) { %>
                                             <th>Tùy chọn</th>
+                                            <% } %>
                                         </thead>
                                         <tbody>
                                             <% if(item) { %>
@@ -60,12 +64,18 @@
                                                         <td><%=element.code%></td>
                                                         <!-- <td><i class="fas fa-edit"></i> | <i class="fa-sharp fa-solid fa-trash"></i></td> -->
                                                         <td>
-                                                            <div>
-                                                                <button type="button" class="btn btn-warning btn-edit-product" data-toggle="modal" data-target="#editProduct" onclick="editProduct('<%=element._id %>')">Sửa</button>
-                                                            </div>
-                                                            <div>
-                                                                <button type="button" class="btn btn-danger" onclick="deleteProduct('<%=element._id %>')">Xóa</button>
-                                                            </div>
+                                                            <% if (role.includes('update')) { %>
+                                                                <div>
+                                                                    <button type="button" class="btn btn-warning btn-edit-product" data-toggle="modal" data-target="#editProduct" onclick="editProduct('<%=element._id %>')">Sửa</button>
+                                                                </div>
+                                                            <% } %>
+                                                            
+                                                            <% if (role.includes('delete')) { %>
+                                                                <div>
+                                                                    <button type="button" class="btn btn-danger" onclick="deleteProduct('<%=element._id %>')">Xóa</button>
+                                                                </div>
+                                                            <% } %>
+                                                            
                                                         </td>
                                                     </tr>
                                                <% }); %>
